# ChangeLog of Nadoka($Rev$)
# $Id$ 
#

2005-05-29(Sun) 03:04:53 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : support filename encoding(utf-8)


2005-05-29(Sun) 02:49:12 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server_state.rb, ndk/config.rb, ndk/logger.rb :
	new logging scheme is added

	* nadokarc : add indent and log detail setting

	* plugins/backlogbot.nb : use logger's message store


2005-05-27(Fri) 21:32:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : comment out Quit_Message and change
	Default_log, Log_TimeFormat setting

	* ndk/client.rb : fix welcome message

	* ndk/config.rb : change Default_log, System_log path,
	Log_TimeFormat and add Log_MessageFormat.


2005-05-26(Thu) 22:11:48 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/autodumpbot.nb, plugins/sixamobot.nb :
	change copyright year


2005-05-26(Thu) 22:07:15 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : fix a bug


2005-05-26(Thu) 21:51:10 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : change default quit message


2005-05-26(Thu) 21:45:49 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix ACL comment


2005-05-26(Thu) 21:42:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/backlogbot.nb : fix configuration example


2005-05-26(Thu) 21:24:50 +0900  Koichi Sasada  <ko1@atdot.net>

	* log/.deleteme : remove


2005-05-26(Thu) 21:23:03 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weatherbot.nb : add parentheses

	* plugins/rss_checkbot.nb : add configuration :over_message


2005-05-26(Thu) 21:03:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* some files : change copyright year


2005-05-26(Thu) 20:52:32 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix plural support bug


2005-05-26(Thu) 20:27:16 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix configuration example
	and support plural

	* plugins/rss_checkbot.nb : change bot_state format and
	separate rss check function
